# torch-spyre

./: CODEOWNERS  MANIFEST.in  pyproject.toml
.github/workflows/: _test_matrix.yaml
docs/source/compiler/: scratchpad_planning.md
extensions/: pyproject.toml
extensions/spyre-metrics-api/: CHANGELOG.md  README.md  example.py  pyproject.toml  setup.py
extensions/spyre-metrics-api/scripts/: convert_section_types.py
extensions/spyre-metrics-api/spyremetrics/: __init__.py  generated_section_types.py  metric_file.py  old_metric_file.py  section_type_defs.py  section_types.json  section_types.py
extensions/spyre-metrics-api/tests/: gen_test_metrics.sh  section_types_test.py
tests/: conftest.py
tests/inductor/: test_coarse_tile_e2e.py  test_coarse_tiling.py  test_inductor_ops.py  test_propagate_named_dims.py  test_scratchpad_use.py
tests/oot_framework/: oot_test_base_common.py  oot_test_config_models.py  run_test.sh
torch_spyre/_inductor/: coarse_tile.py  config.py  op_spec.py  pass_utils.py  passes.py  propagate_layouts.py  spyre_kernel.py  views.py  work_division.py
torch_spyre/_inductor/codegen/: compute_ops.py  superdsc.py
torch_spyre/_inductor/scratchpad/: allocator.py  utils.py
torch_spyre/csrc/: job_plan.cpp  module.cpp  prepare_kernel.cpp  spyre_allocator.cpp  spyre_allocator.h  spyre_stream.cpp
