## This is a safe guard to prevent tooling to look for config files
## in the torch-spyre project root directory.

[project]
name = "torch_spyre.extensions"
authors = [
    {name = "Torch-Spyre Extension Teams"}
]
description = "Torch-Spyre extensions"
version = "0.0.1"

[build-system]
requires = [
    "build",
    "setuptools>=70.1.0,<80.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools] # Guard for setuptools
# Sub-directories are pruned in MANIFEST.in

[tool.ruff] # Guard for ruff
extend-exclude = ["**/"]

[tool.mypy] # Guard for mypy
exclude = [".*/"]

[tool.uv] # Guard for uv

[tool.uv.build-backend]
source-exclude = [".*/"]
